objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ccrz__CompanyName__c</fullName>
        <defaultValue>$User.CompanyName</defaultValue>
        <label>CompanyName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__CompanyType__c</fullName>
        <label>CompanyType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Type1</fullName>
                </value>
                <value>
                    <fullName>Type2</fullName>
                </value>
                <value>
                    <fullName>Type3</fullName>
                </value>
                <value>
                    <fullName>Type4</fullName>
                </value>
                <value>
                    <fullName>Type5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__DataId__c</fullName>
        <description>B2B Commerce internal use only except when used with ccApiTestData.</description>
        <externalId>true</externalId>
        <inlineHelpText>B2B Commerce internal use only except when used with ccApiTestData.</inlineHelpText>
        <label>DataId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__IsPortalUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Contact a Portal User</description>
        <inlineHelpText>True if contact is a portal user, False otherwise</inlineHelpText>
        <label>Portal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__SelfRegistered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean determining if the user is a portal user self registered through the site.</description>
        <label>Self Registered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dbu_Company_Name__c</fullName>
        <label>dbu Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Youreka_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Youreka Form</label>
        <referenceTo>disco__Form__c</referenceTo>
        <relationshipLabel>Youreka Contacts</relationshipLabel>
        <relationshipName>Youreka_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sessionIdRecord__c</fullName>
        <label>sessionIdRecord</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>IAM_Contact_source__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <sharedTo>
            <role>Connected_Solutions</role>
            <role>FE_Admins</role>
            <role>Factory</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_CSTS_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>Mobile_Phone__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ERP_Customer_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.CSTS_Contacts_Australia</value>
        </filters>
        <label>All CSTS Contacts</label>
        <sharedTo>
            <group>CSTS_Australia_Admin</group>
            <group>CSTS_Australia_Agent</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>BulkMessageContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>Bulk_SMS_Contacts</label>
    </listViews>
    <listViews>
        <fullName>CSS_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Contact.Product_Connectivity,Contact.Cummins_India_Contacts</value>
        </filters>
        <label>CSS Contacts</label>
        <language>en_US</language>
        <sharedTo>
            <role>FE_Admins</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cummins_India_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Cummins_India_Contacts</value>
        </filters>
        <label>Cummins India Contacts</label>
        <language>en_US</language>
        <sharedTo>
            <role>FE_Admins</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finesse_Workbook</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ERP_Customer_Code__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.CSTS_Contacts_Australia</value>
        </filters>
        <label>Australia Contacts</label>
        <sharedTo>
            <group>CSTS_Australia_Admin</group>
            <group>CSTS_Australia_Agent</group>
            <role>CSTS_Australia_Admin</role>
            <role>CSTS_Australia_Agent</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IAM</fullName>
        <columns>FULL_NAME</columns>
        <columns>Username__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>IAM_Contact_Status__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IAM_Internal__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notEqual</operation>
            <value>IAM Default Account (No Codes Associated)</value>
        </filters>
        <label>IAM</label>
        <language>en_US</language>
        <sharedTo>
            <group>IAM_Business_Admin_Group</group>
            <group>IAM_OSM_Admins_Group</group>
            <group>OSM_Admins_For_Account_Sharing</group>
            <group>OSM_Business_Admin_Users</group>
            <group>OSM_Business_Admins_For_Account_Sharing</group>
            <role>FE_Admins</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IAM_Internal</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>Username__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CMI_User_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IAM_Internal__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>IAM_Legacy_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>IAM Internal</label>
        <language>en_US</language>
        <sharedTo>
            <role>FE_Admins</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IAM_Reclaim</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>IAM_Contact_Status__c</columns>
        <columns>Username__c</columns>
        <columns>IAM_Applications__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IAM_Contact_Status__c</field>
            <operation>equals</operation>
            <value>Reclaim</value>
        </filters>
        <filters>
            <field>IAM_Activated_On__c</field>
            <operation>equals</operation>
        </filters>
        <label>IAM Reclaim</label>
        <language>en_US</language>
        <sharedTo>
            <role>FE_Admins</role>
            <role>Factory</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mexico_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>kgola</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Mexico Contacts</label>
        <language>en_US</language>
        <sharedTo>
            <role>FE_Admins</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>OnC_CBS_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.OneC_CBS_Supplier</value>
        </filters>
        <label>OneC CBS Contacts</label>
        <sharedTo>
            <group>OneC_CBS_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PC_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Product_Connectivity</value>
        </filters>
        <label>PC Contacts</label>
        <language>en_US</language>
        <sharedTo>
            <role>FE_Admins</role>
            <role>PC_Admin</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>CSS_WS_RT_Contacts</fullName>
        <active>true</active>
        <description>CSS WS Warranty Distributors and Dealers Contacts</description>
        <label>CSS_WS_RT_Contacts</label>
    </recordTypes>
    <recordTypes>
        <fullName>CSTS_Contacts_Australia</fullName>
        <active>true</active>
        <description>Created to track Contacts created for Cummins Care Australia team</description>
        <label>Contacts Australia</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cummins_India_Contacts</fullName>
        <active>true</active>
        <label>Cummins India Contacts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Guidanz</fullName>
        <active>true</active>
        <description>To be used for Customer records from ERP</description>
        <label>Guidanz</label>
    </recordTypes>
    <recordTypes>
        <fullName>Guidanz_Temp</fullName>
        <active>true</active>
        <label>Guidanz_Temp</label>
    </recordTypes>
    <recordTypes>
        <fullName>IAM</fullName>
        <active>true</active>
        <description>Please use this for creating external users, for creating Cummins users please follow WWIMS process. After creating user, please assign needed Application-Role&apos;s by clicking on &quot;Assign App/Feature&quot; to complete user setup without which user cannot access.</description>
        <label>IAM</label>
    </recordTypes>
    <recordTypes>
        <fullName>IAM_QSOL_Service_Contacts</fullName>
        <active>true</active>
        <label>IAM_QSOL_Service_Contacts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal</fullName>
        <active>true</active>
        <label>Internal</label>
    </recordTypes>
    <recordTypes>
        <fullName>OneC_CBS_Supplier</fullName>
        <active>true</active>
        <description>OneC: Created to track CBS Supplier Contact</description>
        <label>OneC CBS Supplier Contacts</label>
    </recordTypes>
    <recordTypes>
        <fullName>OneC_Contacts</fullName>
        <active>true</active>
        <description>OneC: Created to track OneC Contacts</description>
        <label>OneC Contacts</label>
    </recordTypes>
    <recordTypes>
        <fullName>OneC_PrevenTech_Contacts</fullName>
        <active>true</active>
        <label>OneC PrevenTech Contacts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Connectivity</fullName>
        <active>true</active>
        <description>for PC contacts</description>
        <label>Product_Connectivity</label>
    </recordTypes>
    <recordTypes>
        <fullName>RLS_Contacts</fullName>
        <active>true</active>
        <description>this record type is to differentiate RLS contacts</description>
        <label>RLS Contacts</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CMI_Phone_Length</fullName>
        <active>true</active>
        <errorConditionFormula>LEN( Phone ) &gt; 50</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>phone number cannot have more than 50 characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_mobile_number_not_blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	$RecordType.Name=&quot;Guidanz&quot;,
	NOT(ISPICKVAL(Text_SMS_Notification_Frequency__c, &quot;Never/Unsubscribed&quot;)),
        ISPICKVAL( Account.Text_SMS_Notification_Frequency__c, &quot;Real-Time&quot;),
	NOT($Permission.FSL_Mobile_Bypass_Validation),
	AND(
		(ISBLANK( MobilePhone ))
	),
	AND(
		NOT($Profile.Name = &apos;CSS Integration&apos;),
     NOT($Profile.Name = &apos;FSL_Guidanz_Customer_Community_User&apos;),
		NOT($Profile.Name = &apos;System Administrator&apos;)
	)
)</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>Please enter Mobile Phone number or change Text (SMS) Notification Frequency to Never / Unsubscribed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL_Email_Mandatory</fullName>
        <active>true</active>
        <description>Email field is mandatory</description>
        <errorConditionFormula>AND(ISBLANK( Email ),
$RecordType.Name = &quot;Guidanz&quot;,
OR($Profile.Name = &apos;CSS_Service_Advanced&apos;, $Profile.Name = &apos;CSS_Service_Technician&apos;))</errorConditionFormula>
        <errorMessage>Email is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL_FirstName_Mandatory_Rule</fullName>
        <active>true</active>
        <description>To make first name as mandatory on contact record</description>
        <errorConditionFormula>AND(ISBLANK( FirstName ),
$RecordType.Name = &quot;Guidanz&quot;,
OR($Profile.Name  = &apos;CSS_Service_Advanced&apos;, $Profile.Name  = &apos;CSS_Service_Technician&apos;))</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>First Name is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL_Never_Unsubscribed_And_None_Toggle</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
	AND(
		(
			Contains(Text(Text_SMS_Notification_Frequency__c), &apos;Never&apos;) &amp;&amp;
			Contains(Text(Email_Notification_Frequency__c), &apos;Never&apos;)
		),
		(
			(isChanged(Troubleshooting_started__c) &amp;&amp; Troubleshooting_started__c) ||
			(isChanged(Authorize_work_started__c) &amp;&amp; Authorize_work_started__c) ||
			(isChanged(Service_Work_Completed__c) &amp;&amp; Service_Work_Completed__c) ||
			(isChanged(Invoice_ready__c) &amp;&amp; Invoice_ready__c) ||
			(isChanged(Equipment_available__c) &amp;&amp; Equipment_available__c)
		)
    ),	
	AND(
        (
            (Text(Text_SMS_Notification_Frequency__c) == Null) &amp;&amp;
            (Text(Email_Notification_Frequency__c) == Null)
        ),
        (
            (isChanged(Troubleshooting_started__c) &amp;&amp; Troubleshooting_started__c) ||
            (isChanged(Authorize_work_started__c) &amp;&amp; Authorize_work_started__c) ||
            (isChanged(Service_Work_Completed__c) &amp;&amp; Service_Work_Completed__c) ||
            (isChanged(Invoice_ready__c) &amp;&amp; Invoice_ready__c) ||
            (isChanged(Equipment_available__c) &amp;&amp; Equipment_available__c)
        )
    )
),
$RecordType.Name=&quot;Guidanz&quot;,
(
	NOT($Profile.Name = &apos;CSS Integration&apos;) &amp;&amp;
	NOT($Profile.Name = &apos;System Administrator&apos;)
)
)</errorConditionFormula>
        <errorMessage>Please select an Email Notification Frequency or Text (SMS) Notification Frequency in order to enable automated communications</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL_Never_Unsubscribed_Toggle</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
        (
            Contains(Text(Text_SMS_Notification_Frequency__c), &apos;Never&apos;) &amp;&amp;
            Contains(Text(Email_Notification_Frequency__c), &apos;Never&apos;)
        ),
        (
            (isChanged(Troubleshooting_started__c) &amp;&amp; Troubleshooting_started__c) ||
            (isChanged(Authorize_work_started__c) &amp;&amp; Authorize_work_started__c) ||
            (isChanged(Service_Work_Completed__c) &amp;&amp; Service_Work_Completed__c) ||
            (isChanged(Invoice_ready__c) &amp;&amp; Invoice_ready__c) ||
            (isChanged(Equipment_available__c) &amp;&amp; Equipment_available__c)
        ),
        $RecordType.Name=&quot;Guidanz&quot;,
        (
            NOT($Profile.Name = &apos;CSS Integration&apos;) &amp;&amp;
            NOT($Profile.Name = &apos;System Administrator&apos;)
        )
    )</errorConditionFormula>
        <errorMessage>Please select an Email Notification Frequency or Text (SMS) Notification Frequency in order to enable automated communications</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL_Phone_Mandatory</fullName>
        <active>true</active>
        <description>Phone Field is Mandatory</description>
        <errorConditionFormula>AND(ISBLANK( Phone ),
$RecordType.Name = &quot;Guidanz&quot;,
OR($Profile.Name = &apos;CSS_Service_Advanced&apos;, $Profile.Name = &apos;CSS_Service_Technician&apos;))</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Phone is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Guidanz_FirstName_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
   $RecordType.Name = &quot;Guidanz&quot;, 
   ISBLANK( FirstName ),
   NOT(OR(
            $Profile.Name=&apos;CSS_Support&apos;,
            $Profile.Name=&apos;CSS Integration&apos;,
            $Profile.Name=&apos;System Administrator&apos;
           )
   )
)</errorConditionFormula>
        <errorMessage>First Name is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IAM_First_Name_Check</fullName>
        <active>true</active>
        <description>Validation rule to make first name on contact as mandatory field</description>
        <errorConditionFormula>AND( 
$RecordType.Name = &quot;IAM&quot;, 
ISBLANK( FirstName ) 
)</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>First name is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IAM_InternalAccountContact</fullName>
        <active>true</active>
        <errorConditionFormula>($Profile.Name &lt;&gt; &apos;IAM_Integration_User&apos;) &amp;&amp; ($Profile.Name &lt;&gt; &apos;CS_Integration&apos;) &amp;&amp; ($Profile.Name &lt;&gt; &apos;System Administrator&apos;) &amp;&amp; Account.IAM_Internal_Account__c &amp;&amp;  OR(ISNEW() , ISCHANGED(AccountId )) &amp;&amp;  !IAM_Internal__c</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Non WWID contacts cannot be created/updated for this location as it is tagged as Internal or Cummins owned location. Please create the user from WWIMS so that the WWID gets pushed into the admin portal for access management.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IAM_UserName_Change</fullName>
        <active>true</active>
        <errorConditionFormula>IF(OR($Profile.Name=&apos;System Administrator&apos;, $Profile.Name=&apos;Cummins Web Profile&apos;,$Profile.Name=&apos;IAM_Integration_User&apos;,(IAM_Is_Merged_Contact__c = True)),false,
IF(AND(NOT(ISBLANK(PRIORVALUE(Username__c))),OR(RecordType.DeveloperName = &quot;IAM&quot;,IAM_Internal__c = true,RecordType.DeveloperName = &quot;Internal&quot;),ISCHANGED(Username__c)),true,false))</errorConditionFormula>
        <errorDisplayField>Username__c</errorDisplayField>
        <errorMessage>Username cannot be updated. Please contact IAM operations team- Ext.IAM.Ops@cummins.com to modify the Username.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IAM_Username</fullName>
        <active>true</active>
        <description>Min 8 characters for username</description>
        <errorConditionFormula>if($RecordType.Name = &quot;IAM&quot;,
IF(TEXT( IAM_Contact_Status__c) &lt;&gt; &quot;Reclaim&quot;,
IF( AND(IAM_Internal__c = false, IAM_Legacy_User__c =false),
IF(NOT(REGEX( Username__c, $Label.IAM_Email_Regex_Validation_Rule ))
,true
,CONTAINS(LOWER(Username__c), &apos;@cummins.com&apos;))
,false)
,false)
,false)</errorConditionFormula>
        <errorDisplayField>Username__c</errorDisplayField>
        <errorMessage>Username should be in email format, should not contain &quot;CUMMINS&quot; and can only include the below special characters
&apos;!#$%&amp;&apos;*/=?^_+-`{|}~&apos;</errorMessage>
    </validationRules>
</CustomObject>